--- a/CSharpPrograms.csproj
+++ b/CSharpPrograms.csproj
@@ -33,7 +33,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <StartupObject>CSharpPrograms.Interfaces</StartupObject>
+    <StartupObject>CSharpPrograms.AdoDemo</StartupObject>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -47,6 +47,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Abstraction.cs" />
+    <Compile Include="AdoDemo.cs" />
     <Compile Include="Arrays.cs" />
     <Compile Include="Basics.cs" />
     <Compile Include="Collections.cs" />
